--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Wikipedia</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Wikipedia</string>
     <string name="title_explore">Explore</string>
     <string name="title_favourites">Favourites</string>
     <string name="title_History">History</string>
